LOOKS: Prevent alignment item from being cut off dropdown select

--- a/src/less/modules/unit-outcome-alignment.less
+++ b/src/less/modules/unit-outcome-alignment.less
@@ -35,4 +35,10 @@ table.table-unit-outcome-alignment {
       color: @brand-danger;
     }
   }
+
+  .help-block.select-alignment-by-item-description {
+    overflow:hidden;
+    text-overflow: ellipsis;
+    width: 600px;
+  }
 }
